--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.3",
     "bootswatch": "^5.3.3",
     "date-fns": "^3.6.0",
+    "ngx-bootstrap": "^12.0.0",
     "ngx-date-fns": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
