--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "bootswatch/dist/lux/bootstrap.css"
+              
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
